# lain

./: .clog.toml  .gitignore  CHANGELOG.md  Cargo.toml  README.md  crates-io.md
.github/workflows/: ci.yaml
examples/: Cargo.toml
examples/example_fuzzer/: Cargo.toml  output.rs
examples/example_fuzzer/src/: main.rs
examples/example_target/: Makefile  main.c
lain/: Cargo.toml
lain/src/: buffer.rs  dangerous_numbers.rs  driver.rs  lib.rs  mutatable.rs  mutator.rs  new_fuzzed.rs  prelude.rs  traits.rs  types.rs
lain_derive/: Cargo.toml  README.md
lain_derive/src/: attr.rs  dummy.rs  fragment.rs  fuzzerobject.rs  lib.rs  mutations.rs  new_fuzzed.rs  new_fuzzed_old.rs  serialize.rs  utils.rs
lain_derive/src/internals/: ast.rs  attr.rs  ctxt.rs  mod.rs  symbol.rs  utils.rs
testsuite/: Cargo.toml
testsuite/benches/: benchmark_generating_fuzzed_struct.rs  benchmark_serialization_throughput.rs
testsuite/src/: lib.rs
